--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="https://res.cloudinary.com/dxceimqgz/image/upload/c_scale,w_50/v1605554724/realEstate/homes/logo_sg9dez.png" />
+  <link rel="icon"
+    href="https://res.cloudinary.com/dxceimqgz/image/upload/c_scale,w_50/v1605554724/realEstate/homes/logo_sg9dez.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -52,6 +53,15 @@
       e.stopPropagation();
     });
   </script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="/__/firebase/8.0.2/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="/__/firebase/8.0.2/firebase-analytics.js"></script>
+
+  <!-- Initialize Firebase -->
+  <script src="/__/firebase/init.js"></script>
 </body>
 
 </html>
